# ASE

./: .gitignore  README.md  main.cpp
ASECoursework1/: CMakeLists.txt  MapListBasketSolver.cpp  MapListBasketSolver.h  SerialBasketSolver.cpp  SerialBasketSolver.h  TestDictionary.cpp  UnorderedMapListBasketSolver.cpp  UnorderedMapListBasketSolver.h  dictionary.h  main.cpp  node.h
ASECoursework1/report/: md_to_pdf.sh  md_to_pdf_open.sh  md_to_tex.sh  pandoc.css  report_n0697611.md
ASECoursework2/code/: cw.cabal
ASECoursework2/code2/: cw.cabal
ASECoursework2/report/: makefile  md_to_pdf.sh  pandoc.css  rep2.md  report_n0697611.md
lab1/: coordinate.cpp  coordinate.h
lab2/: BinarySearchTree.cpp  BinarySearchTree.h  CMakeCache.txt  CMakeLists.txt  Makefile  TestBinarySearchTree.cpp  cmake_install.cmake  core  main.cpp
lab4b/: BinarySearchTree.cpp  BinarySearchTree.h  CMakeCache.txt  Makefile  TestBinarySearchTree.cpp  cmake_install.cmake  main.cpp
labAVL/: BinarySearchTree.cbp  BinarySearchTree.cpp  BinarySearchTree.h  CMakeLists.txt  HashTable.h  main.cpp
term1/: .gitignore
term1/dictionary-testing/: CMakeLists.txt  main.cpp
term1/lab2/: BinarySearchTree.cpp  BinarySearchTree.h  CTestTestfile.cmake  TestBinarySearchTree.cpp
term1/lab4b/: .gitignore  TestBinarySearchTree.cpp
term1/labAVL/: .gitignore  BinarySearchTree.cbp  BinarySearchTree.cpp  CMakeLists.txt  HashTable.cpp  HashTable.h  TestBinarySearchTree.cpp  TestHashTable.cpp  main.cpp
term2/: .gitignore
term2/dump/: .ghc.environment.x86_64-linux-8.6.5  BofN.cabal  CHANGELOG.md  LICENSE  (+5 more)
(+28 files in other folders)
